Change login and session rules
